<resources>

    <string name="app_name">MyWall</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="random_text_color_tv">Random Text Color</string>
    <!-- TextSize -->
    <string name="text_settings">Text Settings</string>
    <string name="animated_background_tv">Animated Background</string>
    <string name="textsize_tv">Text Size</string>
    <string name="textsize_choose">Choose Text Size</string>
    <string name="background_color_picker_tv">Background Color</string>
    <string name="text_color_picker_tv">Text Color</string>
    <string name="textsize">Text size</string>
    <string name="generating_font">Generating Font</string>
    <string name="textsize_max">MAX</string>
    <!-- /TextSize -->
    <!-- FrameRate -->
    <string name="frame_rate_tv">Frame Rate</string>
    <string name="value_tv">Value</string>
    <!-- /FrameRate -->
    <!-- Background -->
    <string name="choose_background_color_text">Choose background color</string>
    <string name="background_settings">Background Settings</string>
    <!-- /Background -->
     <string name="main_settings">Main Settings</string>
    <!-- Element Count -->
    <string name="element_count_tv">Lines on Screen</string>
    <!-- /Element Count -->
    <string name="proces_count_tv">Process Quantity</string>
    <!-- Data Type -->
    <string name="data_type_name">Choose Data Type</string>
    <string name="cpu_loading">Loading…</string>
    <string name="choose_file">Choose file</string>

    <string-array name="data_type_values">
        <item>CPU</item>
        <item>Time</item>
        <item>Custom file</item>
    </string-array> 
    <!-- /Data Type -->


    <!-- Fonts -->
    <string name="fonts_menu">Choose Font</string>

    <string-array name="fonts_names">
        <item>Spectrum</item>
        <item>Merchant</item>
        <item>CodeMan</item>
        <item>Basic</item>
        <item>Advocut</item>
        <item>Arcade</item>
        <item>X-Space</item>
    </string-array>
    <string-array name="fonts_values">
        <item>Very Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
    </string-array>
    <!-- /Fonts -->

</resources>