<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/title_devider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_settings" />

        <TextView
            android:id="@+id/text_size_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/textsize" />

        <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height" >

            <TextView
                android:id="@+id/random_color_textview"
                style="@style/textview_settings"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@+id/random_color_vertical_devider"
                android:text="@string/random_text_color_tv" />

            <ImageView
                android:id="@+id/random_color_vertical_devider"
                style="@style/devider"
                android:layout_width="@dimen/devider_height"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/random_color_checkbox" />

            <CheckBox
                android:id="@+id/random_color_checkbox"
                style="@style/checkbox_settings"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />
        </RelativeLayout>

        <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />

        <TextView
            android:id="@+id/text_color_picker_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/text_color_picker_tv" />

        <TextView
            style="@style/title_devider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_settings" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height" >

            <TextView
                android:id="@+id/animated_background_textview"
                style="@style/textview_settings"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@+id/animated_background_vertical_devider"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/animated_background_tv" />

            <ImageView
                android:id="@+id/animated_background_vertical_devider"
                style="@style/devider"
                android:layout_width="@dimen/devider_height"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/animated_background_checkbox" />

            <CheckBox
                android:id="@+id/animated_background_checkbox"
                style="@style/checkbox_settings"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />
        </RelativeLayout>

        <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />

        <TextView
            android:id="@+id/background_color_picker_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/background_color_picker_tv" />
        
        
        <TextView
            style="@style/title_devider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_settings" />

         <TextView
            android:id="@+id/elements_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/element_count_tv" />
         
         <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />
         
         <TextView
            android:id="@+id/process_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/proces_count_tv" />
        <!--
        <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />

        <TextView
            android:id="@+id/text_color_picker_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/text_color_picker_tv" />

       

        <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />

        <TextView
            android:id="@+id/textsize_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/textsize_tv" />


        <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />

        <TextView
            android:id="@+id/elements_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/elements_tv" />

        <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />

        <TextView
            android:id="@+id/element_count_tv"
            style="@style/clickable_textview_settings"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/settings_main_item_height"
            android:text="@string/element_count_tv" />

        <ImageView
            style="@style/devider"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/devider_height" />
        -->
    </LinearLayout>

</ScrollView>